--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: @blog, local: true) do |form| %>
+<%= form_with(model: @blog, local: true,url: choose_new_or_edit ) do |form| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
       <ul>
-
+<%# url:confirm_blogs_path => url: choose_new_or_edit に変更。ヘルパーメソッドを使うため。%>
       <% @blog.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
