--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,4 +1,4 @@
-<h3>以下の内容で、送信する。</h3><!-- コンファームファイル -->  /
+<h3>以下の内容で、送信する。</h3><!-- コンファームファイル -->  
 
 <%= form_with(model: @blog, url:blogs_path, local: true) do |form| %>
   <%= form.hidden_field :title %><!-- .hidden_fieldで入力フォームを生成せずnew veiwから来た値をそのままconfirmアクションに渡す-->
@@ -8,7 +8,7 @@
   <p>本文:<%= @blog.content %></p>
   <%= form.submit  "登録する" %>
   <%= form.submit "戻る", name: 'back' %>
-  
+
 <% end %>
 
 <!-- `hidden_field`によりpostメソッド実行時に`form_with do ~ end`に設定した値をリクエストパラメータに設定できる。-->
