--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -14,8 +14,8 @@
     <!-- #追加.記述後はshowアクションを記述。 -->
     <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td><!--showアクションのprefix確認後記入(blog)。(blog.id)とeachで個別の記事を表示  -->
     <!-- #showアクションのprefix確認後記入=>blog_path(複数ではない事に注意)。(blog.id)とeachで個別の記事を表示 -->
-    <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' } %>#</td><!-- #data:{confirm~~~ で確認ダイアログを表示する。  -->
-    <td><%= link_to "ブログを削除する" ,blog_path(blog.id),method: :delete,data: { confirm: '本当に削除していいですか？'} %>#</td><!-- link_toメソはデフォでHTTPメソのgetを呼び出すためそのメソッドをdeleteに変える必要がある。それがmethod:delete -->
+    <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' } %></td><!-- #data:{confirm~~~ で確認ダイアログを表示する。  -->
+    <td><%= link_to "ブログを削除する" ,blog_path(blog.id),method: :delete,data: { confirm: '本当に削除していいですか？'} %></td><!-- link_toメソはデフォでHTTPメソのgetを呼び出すためそのメソッドをdeleteに変える必要がある。それがmethod:delete -->
   </tr>
 <% end %>
 </table>
