--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,4 +1,5 @@
 <h1>ブログ詳細画面</h1>
 <p>タイトル: <%= @blog.title %></p>
-<!-- #アクションで取得した個々のparametersの情報が反映される -->
 <p>内容: <%= @blog.content %></p>
+<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<!-- #アクションで取得した個々のparametersの情報が反映される -->
