--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,23 +1,22 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+        <span class="sr-only">Bootstrap</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Bootstrap
 
-<h1>ブログ一覧</h1>
-<p><%= notice %></p>
-<table>
-  <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-  </tr>
-
-<% @blogs.each do |blog| %><!--  -->
-  <tr>
-    <td><%= blog.title %></td><!--変数blogのtitleを指定。下記も同様  -->
-    <td><%= blog.content %></td><!--  -->
-    <!-- #追加.記述後はshowアクションを記述。 -->
-    <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td><!--showアクションのprefix確認後記入(blog)。(blog.id)とeachで個別の記事を表示  -->
-    <!-- #showアクションのprefix確認後記入=>blog_path(複数ではない事に注意)。(blog.id)とeachで個別の記事を表示 -->
-    <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' } %></td><!-- #data:{confirm~~~ で確認ダイアログを表示する。  -->
-    <td><%= link_to "ブログを削除する" ,blog_path(blog.id),method: :delete,data: { confirm: '本当に削除していいですか？'} %></td><!-- link_toメソはデフォでHTTPメソのgetを呼び出すためそのメソッドをdeleteに変える必要がある。それがmethod:delete -->
-  </tr>
-<% end %>
-</table>
-
-<%= link_to '新しくブログを投稿する',new_blog_path %>   <!--  link_toメソッド '期待する表示',パス %  -->
+      </a>
+    </div>
+    <div id="gnavi" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="">top</a></li>
+        <li><a href="">menu1</a></li>
+        <li><a href="">menu2</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
