--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,22 +1,54 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-        <span class="sr-only">Bootstrap</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Bootstrap
+<div class="container">
+  <header class="header">Bootstrap　<div class="label label-success">challenge!</div></header>
+  <!-- alert クラス alert-success alert-info alert-warning alert-danger でデザインが完成-->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+          <span class="sr-only">Bootstrap</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Bootstrap</a>
+      </div>
+      <div id="gnavi" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="">top</a></li>
+          <li><a href="">menu1</a></li>
+          <li><a href="">menu2</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      </a>
+  <article>
+    <div class="contents">
+      <div class="row">
+
+        <div class="col-md-6">
+          <ul class="row_A">
+            <li class="col-sm-6 col-md-3">contents1</li>
+            <li class="col-sm-6 col-md-offset-1 col-md-8">contents2</li>
+            <li class="col-sm-6 col-md-5">contents3</li>
+            <li class="col-sm-6 col-md-offset-2 col-md-5">contents4</li>
+          </ul>
+        </div>
+
+        <div class="col-md-6">
+          <div class="topic">
+            <ul class="row_B">
+              <li class="col-md-12">bootstrapを使ってレスポンシブデザインを実現しよう！</li>
+              <li class="col-md-12">やればできる！bootstrapを使ってみよう！</li>
+              <li class="col-md-12">怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に!</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
     </div>
-    <div id="gnavi" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="">top</a></li>
-        <li><a href="">menu1</a></li>
-        <li><a href="">menu2</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  </article>
+</div>
+<!-- 追加 --><!-- 追加 --><!-- 追加 --><!-- 追加 --><!-- 追加 -->
+
+<!-- 表示が切り替わるポイントをブレイクポイントという -->
